projects/meta-mapper/force-app/main/default/objects/Dependency_Scan_Status__e/Dependency_Scan_Status__e.object-meta.xml
<CustomObject>
    <description
  >Platform Event published by the scan engine to push real-time progress updates to the metaMapperProgress LWC. One event is published per Queueable execution - not per node - to stay within the org daily Platform Event delivery limit. Suppressed automatically when the org exceeds 80% of the daily limit; the LWC falls back to polling in that case.</description>
    <label>Dependency Scan Status</label>
    <pluralLabel>Dependency Scan Statuses</pluralLabel>
</CustomObject>