projects/meta-mapper/force-app/main/default/objects/Dependency_Scan_Status__e/fields/Components_Analyzed__c.field-meta.xml
<CustomField>
    <fullName>Components_Analyzed__c</fullName>
    <description
  >Number of components analyzed at the time this event was published. Used to update the progress bar in the LWC without a server round-trip.</description>
    <label>Components Analyzed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>