projects/meta-mapper/force-app/main/default/objects/Dependency_Scan_Status__e/fields/Scan_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Scan_Job_Id__c</fullName>
    <description
  >ID of the Metadata_Scan_Job__c record this event relates to. Used by the progress LWC to filter events for the current scan.</description>
    <label>Scan Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>