projects/meta-mapper/force-app/main/default/objects/Dependency_Scan_Status__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current scan status at the time this event was published. Mirrors the Status__c values on Metadata_Scan_Job__c (Initializing, Processing, Paused, Completed, Failed, Cancelled).</description>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>