projects/meta-mapper/force-app/main/default/objects/Dependency_Scan_Status__e/fields/Status_Message__c.field-meta.xml
<CustomField>
    <fullName>Status_Message__c</fullName>
    <description>Human-readable description of what the scan engine was doing when this event was published (e.g. "Analyzing Flow dependencies..."). Displayed below the progress bar in the metaMapperProgress LWC. Ref: ISP-6072</description>
    <label>Status Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>